[project]
name = "company-agent"
version = "0.1.0"
description = "Company Agent Service"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "fastapi (>=0.104.1,<0.105.0)",
    "uvicorn (>=0.24.0,<0.25.0)",
    "pydantic (>=2.4.2,<3.0.0)",
    "sqlalchemy (>=2.0.23,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
name = "company-agent"
version = "0.1.0"
description = "Company Agent Service"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python -m uvicorn main:app --reload"
